# idealos_bottom

./: .gitignore  .mocharc.cjs  README.md  notes.txt  package-lock.json  package.json  tsconfig.json
clients/rust-screen/: Cargo.toml  sdlnotes.md
clients/rust-screen/src/: backend.rs  common.rs  debug_schemas.rs  fontinfo.rs  general_schemas.rs  graphics_schemas.rs  incoming.rs  main.rs  menus_schemas.rs  messages.rs  raylib.rs  raylib_backend.rs  sdl2backend.rs  window.rs  windows_schemas.rs
docs/: db.md  menubar.md
resources/: apps.json  keybindings.json  theme.json  uitheme-dark.json  uitheme.json
resources/database/: example_docs.js  testdata.js
resources/fonts/: emoji.json  font.json  standard.font.json
resources/schemas/: app.schema.json  uitheme.schema.json
resources/translations/: base.json  lolcat.json
scratch/: mockup1.html  mockup1.js  test1.html
src/: common.js
src/canvas/: canvas_screen.js  messages.js  screen.html
src/clients/: about.js  apis.js  app1.js  app2.js  app3.js  app_utils.js  chat.js  debug.js  dock.js  fractal.js  gui_test.js  guitoolkit.js  jessecalc.js  menubar.js  musicplayer.js  notes.js  pixelclock.js  scry.js  testit.js  texteditor.js  todolist.js
test/: applist.test.js  audio.test.js  audio.test.ts  common.js  common.ts  db.test.js  db.test.ts  db2.test.ts  font.test.ts  index.spec.ts  keybindings.test.js  keybindings.test.ts  resources.test.js  text.test.js  theme.test.js  translations.test.js  window.test.js
tools/: docs.js  ingest.js  main.css  make_docs.js  markdown.js  schema_compiler.js  util.js
(+75 files in other folders)
