[package]
name = "rust-screen"
version = "0.1.0"
authors = ["Josh Marinacci <jmarinacci@lyft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.26.2"
serde_json = "1.0.64"
serde = { version="1.0.125", features = ["derive"] }